--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,9 @@
               {
                   "input": "./node_modules/primeng/resources/themes/darkness/theme.css"
               },
+              {
+                "input": "./node_modules/primeng/resources/themes/bootstrap/theme.css"
+              },
               "src/styles.css"
             ]
             ,
